<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item
    android:id="@+id/bitcointrader_options_select_currency"
    android:icon="@drawable/ic_action_select_currency"
    android:showAsAction="ifRoom|withText"
    android:title="@string/select_currency_title"/>
  <item
    android:id="@+id/bitcointrader_options_refresh"
    android:icon="@drawable/ic_action_refresh"
    android:showAsAction="ifRoom|withText"
    android:title="@string/refresh_title"/>
  <item 
    android:id="@+id/bitcointrader_options_wallet_history"
    android:showAsAction="never"
    android:title="@string/wallet_history_title"/>
  <item
    android:id="@+id/bitcointrader_options_preferences"
    android:showAsAction="never"
    android:title="@string/preferences_title"/>
  <item
    android:id="@+id/bitcointrader_options_about"
    android:showAsAction="never"
    android:title="@string/about_title"/>
  <item
    android:id="@+id/bitcointrader_options_donate"
    android:showAsAction="never"
    android:title="@string/bitcointrader_options_donate"/>
</menu>